--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@headlessui/vue": "^1.5.0",
     "@heroicons/vue": "^1.0.5",
     "@vue/test-utils": "^2.0.0-rc.17",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-vue": "^8.5.0",
     "pinia": "^2.0.11",
+    "prettier": "^2.5.1",
     "vue": "^3.2.25",
     "vue-router": "4"
   },
