[ADD] tests repository

--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest --dom"
+    "test": "vitest --dom",
+    "coverage": "vitest --dom run --coverage"
   },
   "dependencies": {
     "@headlessui/vue": "^1.5.0",
     "@heroicons/vue": "^1.0.5",
     "@vue/test-utils": "^2.0.0-rc.17",
+    "c8": "^7.11.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-vue": "^8.5.0",
+    "happy-dom": "^2.41.0",
     "pinia": "^2.0.11",
     "prettier": "^2.5.1",
     "vue": "^3.2.25",
